# csubgraph

./: .gitignore  CMakeLists.txt  Cli.cpp  QUICKSTART_DE.md  README.md  SubgraphAlgorithm.cpp  SubgraphAlgorithm.h  SubgraphTest.cpp  examples.cpp  setup_and_run.ps1
doc/: tests-cli.txt  tests.txt
tests/: TestSubgraphAlgorithm.cpp
